# 100pro2026

./: .env.example  .gitignore  API_SMOKE_TEST_VERIFICATION.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  temp_tree.txt  turbo.json
.devcontainer/: .gitattributes  Dockerfile  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 20260222000000_initial_schema.sql  20260301_init.sql
apps/desktop/src-tauri/migrations/postgres/: 20260303_init.sql  20260304_v2.sql  20260305103000_init.sql  20260305_v3.sql  20260309010000_v3.sql  20260319021700_v4.sql  20260319053000_v5_profile_trigger.sql  20260326170000_v6_profiles_rls_and_signup_safe_trigger.sql
apps/desktop/src-tauri/migrations/sqlite/: 20260304_v2.sql  20260305103000_init.sql  20260305_v3.sql  20260306205000_v2.sql  20260309010000_v3.sql
apps/desktop/src-tauri/src/: database.rs  error.rs  lib.rs  logger.rs  state.rs
apps/desktop/src-tauri/src/commands/: auth_commands.rs  db_commands.rs  debug.rs  mod.rs
apps/desktop/src-tauri/src/database/: connection.rs
apps/desktop/src-tauri/src/models/: item.rs  mod.rs  session.rs  sync.rs  user.rs
apps/desktop/src-tauri/src/repositories/: item_repo.rs  mod.rs  postgres_item_repo.rs  postgres_profile_repo.rs  profile_repo.rs  session_repo.rs  sqlite_item_repo.rs  sqlite_session_repo.rs  sqlite_user_repo.rs  user_repo.rs
apps/desktop/src-tauri/src/services/: debug_service.rs  item_service.rs  mod.rs
apps/desktop/src-tauri/src/utils/: logger.rs
apps/desktop/src-tauri/tests/: db_test.rs
(+65 files in other folders)
