[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri & 基本
tauri = { version = "2", features = ["devtools"] } # 開発ツールを有効化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2"

# 非同期 & エラー管理
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"

# SQLx (SQLite)
sqlx = { version = "0.8", features = [ 
    "runtime-tokio", 
    "tls-rustls", 
    "sqlite", 
    "uuid", 
    "chrono", 
    "macros",
    "migrate"
] }

# データ型
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
